Fix black color for open dropdowns when navbar is collapsed.

--- a/content/assets/css/faskatech.css
+++ b/content/assets/css/faskatech.css
@@ -19,6 +19,10 @@
 	background-color: #006400;
 }
 
+.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+	color: black;
+}
+
 .navbar-inverse .navbar-nav>li>a {
 	color: #333;
 }
